Add linting to CI (mypy, djlint)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = ["flashcards", "core", "accounts", "decks", "quiz"]
 
 [tool.mypy]
 plugins = ["mypy_django_plugin.main"]
+explicit_package_bases = true
 
 [tool.django-stubs]
 django_settings_module = "flashcards.settings"
