--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint and Test
 
 on: [push, pull_request]
 
@@ -26,3 +26,6 @@ jobs:
       continue-on-error: true
       run: |
         mypy .
+    - name: Test
+      run: |
+        python manage.py test
