--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ packages = ["flashcards", "core", "accounts", "decks", "quiz"]
 [tool.mypy]
 plugins = ["mypy_django_plugin.main"]
 explicit_package_bases = true
+check_untyped_defs = true
+enable_error_code = "explicit-override"
 
 [tool.django-stubs]
 django_settings_module = "flashcards.settings"
