--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ enable_error_code = "explicit-override"
 
 [tool.django-stubs]
 django_settings_module = "flashcards.settings"
+
+[tool.djlint]
+profile = "django"
