Dockerize application Now that we have three different services (django, dramatiq, redis), manually creating them is somewhat a pain

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "channels_redis",
     "dramatiq[redis, watch]",
     "django-dramatiq",
+    "django-environ",
+    "mysqlclient",
 ]
 
 [build-system]
