Fixed in tome file  , exclude = "^build/"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ plugins = ["mypy_django_plugin.main"]
 explicit_package_bases = true
 check_untyped_defs = true
 enable_error_code = "explicit-override"
-exclude = ^build/
+exclude = "^build/"
 
 
 [tool.django-stubs]
