--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,14 @@
 name: Lint and Test
 
-on: [push]
+on: [pull_request]
 
 env:
   DATABASE_URL: "sqlite:////db.sqlite3"
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     continue-on-error: true
     strategy:
       matrix:
@@ -29,4 +31,21 @@ jobs:
         mypy .
     - name: Test
       run: |
-        python manage.py test
+        coverage run --source='.' manage.py test
+        coverage xml
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: 'coverage.xml'
+        badge: true
+        format: 'markdown'
+        output: 'both'
+    - name: Comment on PR
+      if: ${{ matrix['python-version'] == '3.13' }}
+      continue-on-error: true
+      uses: peter-evans/create-or-update-comment@v4
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        body-path: code-coverage-results.md        
+    - name: Write to Job Summary
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
